logs/Slang/generated/hdlconv/hdlconvertor_p332.sv.log
name: hdlconvertor_p332
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p332.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p332.sv:1:43: error: dimension requires a constant range
task automatic show ( const ref byte data [] );
                                          ^~
